--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Oraniembaum:wght@100&display=swap'); 
+/* @import url('https://fonts.googleapis.com/css2?family=Oraniembaum:wght@100&display=swap'); 
 
 html, body, [class*="css"] {
     font-family: 'Oraniembaum', serif; 
@@ -6,7 +6,7 @@ html, body, [class*="css"] {
     font-weight: 500;
     color: #091747;
 }
-
+ */
 ul {
     padding-left: 1.5rem;
 }
